
src = files(
  'graph.cpp',
 'label.cpp',
 'popup.cpp',
 'theme.cpp',
 'button.cpp',
 'canvas.cpp',
 'common.cpp',
 'layout.cpp',
 'opengl.cpp',
 'screen.cpp',
 'shader.cpp',
 'slider.cpp',
 'traits.cpp',
 'widget.cpp',
 'window.cpp',
 'textbox.cpp',
 'texture.cpp',
 'checkbox.cpp',
 'combobox.cpp',
 'imageview.cpp',
 'shader_gl.cpp',
 'tabwidget.cpp',
 'colorwheel.cpp',
 'imagepanel.cpp',
 'texture_gl.cpp',
 'colorpicker.cpp',
 'popupbutton.cpp',
 'progressbar.cpp',
 'vscrollpanel.cpp',
 'messagedialog.cpp',
 'renderpass_gl.cpp',
  )
